--- a/notebook/TrafficSense.ipynb
+++ b/notebook/TrafficSense.ipynb
@@ -724,7 +724,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Model Training\n",
+        "# Model Training with SGD AND L2\n",
         "def train_model(X_train, y_train, X_val, y_val, pretrained_model_path=None):\n",
         "    if pretrained_model_path:\n",
         "        model = tf.keras.models.load_model(pretrained_model_path)\n",
